[gd_scene load_steps=13 format=2]

[ext_resource path="res://Debug/Debug.gd" type="Script" id=1]
[ext_resource path="res://addons/Gamepad/GamepadContainer.gd" type="Script" id=2]
[ext_resource path="res://addons/Gamepad/icons/container.png" type="Texture" id=3]
[ext_resource path="res://addons/Gamepad/GamepadStick.gd" type="Script" id=4]
[ext_resource path="res://addons/Gamepad/icons/stick.png" type="Texture" id=5]
[ext_resource path="res://assets/Gamepad/big_circle.png" type="Texture" id=6]
[ext_resource path="res://assets/Gamepad/small_circle.png" type="Texture" id=7]
[ext_resource path="res://addons/Gamepad/GamepadButton.gd" type="Script" id=8]
[ext_resource path="res://addons/Gamepad/icons/button.png" type="Texture" id=9]
[ext_resource path="res://assets/arial.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[node name="Debug" type="Node" index="0"]

script = ExtResource( 1 )

[node name="GamepadContainer" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
disabled = false

[node name="GamepadStick" type="Control" parent="GamepadContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 420.0
margin_right = 294.0
margin_bottom = 676.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
disabled = false
show_dynamically = false
gamepad_type = "STICK 0"
stick_type = 0
background_texture = ExtResource( 6 )
stick_texture = ExtResource( 7 )
stick_scale = Vector2( 3, 3 )
static_position = Vector2( 38, 420 )
hide_stick_on_stop = false
adjust_iso = 0
valid_threshold = 0.2
step = 0.0

[node name="GamepadButton" type="Control" parent="GamepadContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1004.0
margin_top = 550.0
margin_right = 1132.0
margin_bottom = 678.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 9 )
}
disabled = false
show_dynamically = false
gamepad_type = "BUTTON 0"
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = null
static_position = Vector2( 1004, 550 )
autofire_delay = 0.25

[node name="GamepadButton2" type="Control" parent="GamepadContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1112.0
margin_top = 403.0
margin_right = 1240.0
margin_bottom = 531.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 9 )
}
disabled = false
show_dynamically = false
gamepad_type = "BUTTON 1"
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = null
static_position = Vector2( 1112, 403 )
autofire_delay = 0.0

[node name="Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="MarginContainer" type="MarginContainer" parent="Control" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 351.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="Control/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 73.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="VSeparator" parent="Control/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.0
margin_right = 81.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chk0" type="CheckBox" parent="Control/MarginContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 85.0
margin_right = 109.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label" type="Label" parent="Control/MarginContainer/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 4.0
margin_right = 127.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator2" type="VSeparator" parent="Control/MarginContainer/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_right = 135.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chk1" type="CheckBox" parent="Control/MarginContainer/HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 139.0
margin_right = 163.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label3" type="Label" parent="Control/MarginContainer/HBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_top = 4.0
margin_right = 181.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator3" type="VSeparator" parent="Control/MarginContainer/HBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_right = 189.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chk2" type="CheckBox" parent="Control/MarginContainer/HBoxContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_right = 217.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label4" type="Label" parent="Control/MarginContainer/HBoxContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 4.0
margin_right = 235.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator4" type="VSeparator" parent="Control/MarginContainer/HBoxContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_right = 243.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chk3" type="CheckBox" parent="Control/MarginContainer/HBoxContainer" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 247.0
margin_right = 271.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label5" type="Label" parent="Control/MarginContainer/HBoxContainer" index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 275.0
margin_top = 4.0
margin_right = 289.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator5" type="VSeparator" parent="Control/MarginContainer/HBoxContainer" index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 293.0
margin_right = 297.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chk4" type="CheckBox" parent="Control/MarginContainer/HBoxContainer" index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 301.0
margin_right = 325.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label6" type="Label" parent="Control/MarginContainer/HBoxContainer" index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 329.0
margin_top = 4.0
margin_right = 343.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer2" type="MarginContainer" parent="Control" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 480.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="VBoxContainer" parent="Control/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 480.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label" type="Label" parent="Control/MarginContainer2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 472.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger positions:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="HSeparator" parent="Control/MarginContainer2/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 472.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer2/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 158.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger 0:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos0" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 158.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0,0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator2" type="HSeparator" parent="Control/MarginContainer2/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 472.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer2/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 158.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0

[node name="Label3" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger 1:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos1" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 158.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0,0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator3" type="HSeparator" parent="Control/MarginContainer2/HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 472.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer2/HBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 158.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0

[node name="Label4" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger 2:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos2" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 158.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0,0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator4" type="HSeparator" parent="Control/MarginContainer2/HBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 472.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/MarginContainer2/HBoxContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 158.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0

[node name="Label5" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger 3:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos3" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer4" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 158.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0,0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator5" type="HSeparator" parent="Control/MarginContainer2/HBoxContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 472.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/MarginContainer2/HBoxContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 212.0
margin_right = 158.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0

[node name="Label6" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer5" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Finger 4:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos4" type="Label" parent="Control/MarginContainer2/HBoxContainer/HBoxContainer5" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 158.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0,0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 388.0
margin_top = 357.0
margin_right = 443.0
margin_bottom = 382.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Force"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Force" type="Label" parent="Control" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 471.0
margin_top = 357.0
margin_right = 526.0
margin_bottom = 382.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "(0, 0)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextEdit" type="TextEdit" parent="Control" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 407.0
margin_right = 903.0
margin_bottom = 671.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="Button" type="Button" parent="Control" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1169.0
margin_top = 20.0
margin_right = 1255.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[connection signal="finger_down" from="GamepadContainer" to="." method="_on_GamepadContainer_finger_down"]

[connection signal="finger_move" from="GamepadContainer" to="." method="_on_GamepadContainer_finger_move"]

[connection signal="finger_up" from="GamepadContainer" to="." method="_on_GamepadContainer_finger_up"]

[connection signal="gamepad_force_changed" from="GamepadContainer/GamepadStick" to="." method="_on_GamepadStick_gamepad_force_changed"]

[connection signal="down" from="GamepadContainer/GamepadButton" to="." method="_on_Button0_down"]

[connection signal="fire" from="GamepadContainer/GamepadButton" to="." method="_on_Button0_fire"]

[connection signal="up" from="GamepadContainer/GamepadButton" to="." method="_on_Button0_up"]

[connection signal="down" from="GamepadContainer/GamepadButton2" to="." method="_on_Button1_down"]

[connection signal="fire" from="GamepadContainer/GamepadButton2" to="." method="_on_Button1_fire"]

[connection signal="up" from="GamepadContainer/GamepadButton2" to="." method="_on_Button1_up"]

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]


